--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,5 +2,9 @@ version: 2
 updates:
   - package-ecosystem: github-actions
     directory: /
+    schedule:
+      interval: weekly
   - package-ecosystem: gomod
     directory: /
+    schedule:
+      interval: weekly
