--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,10 +1,14 @@
 version: 2
 updates:
-  - package-ecosystem: github-actions
-    directory: /
+  - package-ecosystem: 'github-actions'
+    directory: '/'
     schedule:
-      interval: weekly
-  - package-ecosystem: gomod
-    directory: /
+      interval: 'weekly'
+    commit-message:
+      prefix: '.github:'
+  - package-ecosystem: 'gomod'
+    directory: '/'
     schedule:
-      interval: weekly
+      interval: 'weekly'
+    commit-message:
+      prefix: 'go.mod:'
