--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,29 +1,21 @@
-name: Build
+name: "Build"
 on:
   push:
-    branches: [master]
-    paths-ignore:
-      - '*.md'
+    branches:
+      - "master"
   pull_request:
 jobs:
   build:
-    name: Build
-    runs-on: ubuntu-latest
+    name: "Build"
+    runs-on: "ubuntu-latest"
     steps:
-      - name: Check out
-        uses: actions/checkout@v3
-      - name: Set up Go
-        uses: actions/setup-go@v3
+      - name: "Check out"
+        uses: "actions/checkout@v5"
+      - name: "Set up Go"
+        uses: "actions/setup-go@v6"
         with:
-          go-version: 1.19
-      - name: Cache dependencies and build cache
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/go/pkg/mod
-            ~/.cache/go-build
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-      - name: Install xcaddy
-        run: go install github.com/caddyserver/xcaddy/cmd/xcaddy@latest
-      - name: Build
-        run: xcaddy build --with go.astrophena.name/tsid=.
+          go-version-file: "go.mod"
+      - name: "Install xcaddy"
+        run: "go install github.com/caddyserver/xcaddy/cmd/xcaddy@latest"
+      - name: "Build"
+        run: "xcaddy build --with go.astrophena.name/tsid=."
